fixed overlapping title at events

--- a/styles/Events.module.css
+++ b/styles/Events.module.css
@@ -98,9 +98,8 @@
 
 
 .title__container{
-  position: absolute;
+  /* position: absolute; */
   /* height: 70vh; */
-  margin-top: 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -111,7 +110,9 @@
 .title__container h1{
   /* border-top: #4eaee5 solid 5px; */
   font-size: 4rem;
+  font-weight: 700;
   line-height: 4rem;
+  margin-bottom: 0;
   color: #fff;
   text-align: center;
   /* font-weight: 300; */
@@ -599,9 +600,6 @@
   }
   .hero__container h1{
     font-size: 1.2rem;
-  }
-  .title__container{
-    padding: 0 20px;
   }
   .title__container h1{
     font-size: 2.2rem;
